# sqlite-fastrand

./: .gitignore  Cargo.toml  Makefile  README.md  bench.sh  docs.md  test.sql
.github/workflows/: release.yaml  rename-wheels.py  test.yaml  upload-deno-assets.js  upload.js
bindings/ruby/: sqlite_fastrand.gemspec
bindings/ruby/lib/: sqlite_fastrand.rb  version.rb  version.rb.tmpl
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_fastrand/: __init__.py
deno/: README.md  README.md.tmpl  deno.json  deno.json.tmpl  mod.ts  test.ts
npm/: README.md
npm/sqlite-fastrand/: README.md  package.json  package.json.tmpl  test.js
npm/sqlite-fastrand-darwin-arm64/: README.md  package.json
npm/sqlite-fastrand-darwin-x64/: README.md  package.json
npm/sqlite-fastrand-linux-x64/: README.md  package.json
npm/sqlite-fastrand-windows-x64/: README.md  package.json
npm/sqlite-fastrand/src/: index.js
python/: README.md
python/datasette_sqlite_fastrand/: README.md  setup.py
python/datasette_sqlite_fastrand/datasette_sqlite_fastrand/: __init__.py
python/datasette_sqlite_fastrand/tests/: test_sqlite_fastrand.py
python/sqlite_fastrand/: README.md  setup.py
python/sqlite_fastrand/sqlite_fastrand/: __init__.py
scripts/: deno_generate_package.sh  npm_generate_platform_packages.sh
src/: lib.rs
tests/: test-loadable.py  test-python.py
