[package]
name = "sqlite-fastrand"
version = "0.2.1-alpha.9"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "A SQLite extension for generating numbers and blobs very quickly"
homepage = "https://github.com/asg017/sqlite-fastrand"
repository = "https://github.com/asg017/sqlite-fastrand"
keywords = ["sqlite", "sqlite-extension"]
license = "MIT/Apache-2.0"

[dependencies]
sqlite-loadable = "0.0.5"
fastrand = "1.8.0"

[lib]
crate-type=["lib", "staticlib", "cdylib"]
